Changelog
=========

2.2.1 (unreleased)
------------------

- Nothing changed yet.


2.2.0 (2012-08-30)
------------------

- Refactor the comment creator/author_name to comply with the Plone core
  convention to store the username on the creator attribute and not the
  fullname.
  [timo]

- Rename the id of the text widgets because there can be css-id clashes with
  the text field of documents when using TinyMCE in overlays or multiple
  instances of TinyMCE on a single page.
  [timo]

- text/html added to the possible mime types for comments.
  [timo]

- Make 'text/plain' the default mime type for comments and make sure the
  default type is set properly when creating a new comment.
  [timo]

- Fix handling of comments with invalid transforms. Write an error msg
  to the log and just return the untransformed text.
  [timo]


2.1.8 (unreleased)
------------------

- Support for Dexterity added. The conversation enabled method now detects and
  supports Dexterity-based content types.
  [timo]

- No more recursive came_from redirection after logged_in.
  [kcleong, huubbouma]

- Danish translation updated.
  [stonor]

- Documentation and howtos updated.
  [timo]

- Remove development buildout files and directories.
  [timo]


2.1.7 (2012-06-29)
------------------

- Prune duplicated test code.
  [pjstevns]

- Update version in buildout.cfg to allow development.
  [pjstevns]

- Conversation.total_comments only counts published comments.
  Fixes bug #11591.
  [pjstevns]

- Set workflow status of comments during migration based on
  the state of the Discussion Item.
  [pjstevns]


2.1.6 (2012-05-30)
------------------

- Add Site Administrator role to Review comments permission.
  [gaudenz]

- Fix excessive JS comment deletion.
  [gaudenz]

- Hide Conversation objects from breadcrumb navigation. The breadcrumbs
  navigation is also used in the search results view. This lead to Conversation
  objects showing up if 'Discussion Items' are searchable.
  [gaudenz]
