@@ -11,7 +11,7 @@
         appId="plone.app.discussion"
         category="Plone"
         condition_expr=""
-        icon_expr="string:${portal_url}/discussionitem_icon.gif"
+        icon_expr="string:${portal_url}/discussionitem_icon.png"
         url_expr="string:${portal_url}/@@discussion-settings"
         visible="True"
         i18n:attributes="title">
